--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather app</title>
-    <script type="module" crossorigin src="assets/index.2ee5311f.js"></script>
-    <link rel="stylesheet" href="assets/index.1117b71a.css">
+    <script type="module" crossorigin src="/assets/index.c1a0e845.js"></script>
+    <link rel="stylesheet" href="/assets/index.1117b71a.css">
   </head>
   <body>
     <div id="app"></div>
