--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather app</title>
-    <script type="module" crossorigin src="/assets/index.c1a0e845.js"></script>
-    <link rel="stylesheet" href="/assets/index.1117b71a.css">
+    <script type="module" crossorigin src="/vue-weather-app/assets/index.c1a0e845.js"></script>
+    <link rel="stylesheet" href="/vue-weather-app/assets/index.1117b71a.css">
   </head>
   <body>
     <div id="app"></div>
